--- a/app/views/devise/unlocks/new.html.erb
+++ b/app/views/devise/unlocks/new.html.erb
@@ -2,25 +2,31 @@
   <div class="bb-container-xs">
     <div class="flex justify-center">
       <div class="w-full">
+
+        <!-- Page Header -->
         <div class="bb-page-header">
           <h1 class="bb-heading-xl">Resend unlock instructions</h1>
           <p class="bb-subtitle">We'll email you a link to unlock your account.</p>
         </div>
 
+        <!-- Unlock Form -->
         <%= form_for(resource, as: resource_name, url: unlock_path(resource_name), html: { method: :post, class: "bb-card bb-card--form" }) do |f| %>
           <%= render "devise/shared/error_messages", resource: resource %>
 
+          <!-- Email Field -->
           <div class="bb-field-lg">
             <%= f.label :email, class: "bb-label" %>
             <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "bb-input" %>
           </div>
 
+          <!-- Submit Button -->
           <div class="flex items-center justify-between">
             <%= f.submit "Resend unlock instructions", class: "bb-btn bb-btn-primary bb-btn--full" %>
           </div>
         <% end %>
 
         <%= render "devise/shared/links" %>
+
       </div>
     </div>
   </div>
