--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,15 +11,19 @@
   </head>
 
   <body class="min-h-screen bg-gray-50 text-gray-900">
+    <!-- Navigation -->
     <% if content_for?(:navbar) %>
       <%= yield(:navbar) %>
     <% else %>
       <%= render "shared/navbar" %>
     <% end %>
 
+    <!-- Main Content -->
     <main class="min-h-[calc(100vh-4rem)]">
       <%= yield%>
     </main>
+
+    <!-- Flash Messages -->
     <div class="fixed inset-x-0 bottom-0 pb-4 pointer-events-none">
       <div class="max-w-5xl mx-auto px-4">
         <%= render "shared/flashbar" %>
