--- a/app/views/universes/show.html.erb
+++ b/app/views/universes/show.html.erb
@@ -4,11 +4,12 @@
 
   <div class="bb-container">
     <div class="bb-layout-sidebar">
-      <!-- Left Sidebar -->
+
+      <!-- Sidebar -->
       <div class="bb-sidebar order-2 lg:order-1">
         <div class="bb-card bb-card--panel">
-          <h2 class="bb-section-heading bb-section-heading--center">Upload & Characters</h2>
 
+          <!-- Upload Form -->
           <%= form_with model: Image.new(universe_id: @universe.id), url: universe_images_url(@universe), method: "post", class: "mb-6" do | form | %>
             <%= form.submit "Upload Image", class: "bb-btn-sm bb-btn-primary w-full mb-3" %>
             <%= form.file_field :image_file, required: true, class: "w-full text-sm text-gray-500 file:mr-4 file:py-2 file:px-4 file:rounded-full file:border-0 file:text-sm file:font-semibold file:bg-blue-50 file:text-blue-700 hover:file:bg-blue-100" %>
@@ -16,6 +17,7 @@
 
           <hr class="bb-divider" />
 
+          <!-- Character Selector -->
           <%= render partial: "shared/character_selector", locals: {
             characters: @universe.characters,
             unique_id: "universe"
@@ -23,15 +25,18 @@
 
           <hr class="bb-divider" />
 
+          <!-- Tag Browser -->
           <%= render partial: "shared/tag_browser" %>
 
           <hr class="bb-divider" />
 
+          <!-- Filters -->
           <%= render partial: "shared/filters", locals: {
             universe: @universe,
             images_filter: @images_filter,
             untagged_images_count: @untagged_images_count
           } %>
+
         </div>
       </div>
 
@@ -45,6 +50,7 @@
           } %>
         </div>
       </div>
+
     </div>
   </div>
 
