--- a/app/views/universes/show.html.erb
+++ b/app/views/universes/show.html.erb
@@ -11,8 +11,8 @@
 
           <!-- Upload Form -->
           <%= form_with model: Image.new(universe_id: @universe.id), url: universe_images_url(@universe), method: "post", class: "mb-6" do | form | %>
-            <%= form.submit "Upload Image", class: "bb-btn-sm bb-btn-primary w-full mb-3" %>
-            <%= form.file_field :image_file, required: true, class: "w-full text-sm text-gray-500 file:mr-4 file:py-2 file:px-4 file:rounded-full file:border-0 file:text-sm file:font-semibold file:bg-blue-50 file:text-blue-700 hover:file:bg-blue-100" %>
+            <%= form.submit "Upload Images", class: "bb-btn-sm bb-btn-primary w-full mb-3" %>
+            <%= form.file_field :image_file, required: true, multiple: true, class: "w-full text-sm text-gray-500 file:mr-4 file:py-2 file:px-4 file:rounded-full file:border-0 file:text-sm file:font-semibold file:bg-blue-50 file:text-blue-700 hover:file:bg-blue-100" %>
           <% end %>
 
           <hr class="bb-divider" />
